--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rafael.paulino/wpapi",
     "type": "library",
-    "license": "GPL",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Rafael Paulino",
